<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image_view"
        android:layout_width="250dp"
        android:layout_height="165dp"
        android:layout_marginStart="3dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ahoy" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/ahoy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp"
        android:backgroundTint="@color/Darkblue">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginText"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/Darkblue"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/username"
            android:drawablePadding="8dp"
            android:hint="@string/username"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/password"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:padding="8dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background"
            android:layout_marginTop="20dp"
            tools:ignore="VisualLintTextFieldSize"
            android:autofillHints="" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/Darkblue"
            android:text="@string/login1"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize"/>

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:text="@string/don_t_have_an_account_sign_up_now"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
